# blis

./: .gitignore  README.md  blis.bib  blis.tex
.github/workflows/: python-tests.yml
figs/: lifecycle.mmd
paper/: .gitignore  README.md  blis.bib  blis.tex  experiment-design-justification.md  howtowrite.txt
paper/figs/: overlap_phases.pptx  reqlifecycle.excalidraw
python/: .gitignore  README.md  baseline.py  baseline_step_betas.py  pyproject.toml  requirements.txt
python/baseline/: __init__.py  baseline.timeintegral.py  timeintegral.py
python/data/traces/: sample.csv
python/data/traces/train/dec11-train-qwen3b-1/: vllm_phases.csv
python/data/traces/train/dec11-train-qwen7b-1/: vllm_phases.csv
python/data/traces/train/dec15-testcontent-qwen1b-1/: vllm_phases.csv
python/estimators/: __init__.py  baseline.py  iterative.py
python/examples/: run.py
python/tests/: test_baseline_e2e.py  test_baseline_sample_trace.py  test_baseline_validation.py  test_correction_exposures.py  test_fuzz_integrals.py  test_iterative_beta_informed_mass.py  test_iterative_modes_smoke.py  test_iterative_paper_semantics_lag.py  test_iterative_sample_trace.py  test_iterative_smoke.py  test_iterative_step_averaged_pressures.py  test_primitives.py  test_timeintegral_correction_exposures.py  test_timeintegral_e2e.py  test_timeintegral_fuzz_integrals.py  test_timeintegral_primitives.py  test_timeintegral_sample_trace.py  test_timeintegral_validation.py
