[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blis-estimators"
version = "0.1.0"
description = "Trace-only estimators for step-level execution coefficients in vLLM-style inference"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "BLIS authors" }
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.4",
  "scikit-learn>=1.0",
]

# Not publishing to PyPI; used for editable installs and clean imports.
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["estimators*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--disable-warnings",
]

[tool.coverage.run]
branch = true
source = ["estimators"]

[tool.coverage.report]
show_missing = true
skip_covered = false
